analyzer/tests/snapshots/analysis__case_081_return_u256_from_called_fn.snap
---
source: analyzer/tests/analysis.rs
expression: "build_snapshot(fixture, src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "bar",
                        params: [],
                        return_type: Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    },
                    FunctionAttributes {
                        is_public: true,
                        name: "foo",
                        params: [],
                        return_type: Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    },
                ],
            },
        ),
    },
    tuples_used: {},
}

note: 
  ┌─ features/return_u256_from_called_fn.fe:5:16
  │
5 │         return self.foo()
  │                ^^^^^^^^^^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_u256_from_called_fn.fe:5:16
  │
5 │         return self.foo()
  │                ^^^^^^^^^^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_u256_from_called_fn.fe:8:16
  │
8 │         return 42
  │                ^^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_u256_from_called_fn.fe:8:16
  │
8 │         return 42
  │                ^^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_u256_from_called_fn.fe:4:5
  │  
4 │ ╭     pub def bar() -> u256:
5 │ │         return self.foo()
  │ ╰─────────────────────────^ attributes hash: 2041944711719443549
  │  
  = FunctionAttributes {
        is_public: true,
        name: "bar",
        params: [],
        return_type: Base(
            Numeric(
                U256,
            ),
        ),
    }

note: 
  ┌─ features/return_u256_from_called_fn.fe:7:5
  │  
7 │ ╭     pub def foo() -> u256:
8 │ │         return 42
  │ ╰─────────────────^ attributes hash: 15216770869499965069
  │  
  = FunctionAttributes {
        is_public: true,
        name: "foo",
        params: [],
        return_type: Base(
            Numeric(
                U256,
            ),
        ),
    }

note: 
  ┌─ features/return_u256_from_called_fn.fe:1:1
  │  
1 │ ╭ contract Foo:
2 │ │ 
3 │ │     # We intentionally define `bar` before `foo` to test that order isn't important
4 │ │     pub def bar() -> u256:
  · │
7 │ │     pub def foo() -> u256:
8 │ │         return 42
  │ ╰─────────────────^ attributes hash: 7904533777120547138
  │  
  = ContractAttributes {
        public_functions: [
            FunctionAttributes {
                is_public: true,
                name: "bar",
                params: [],
                return_type: Base(
                    Numeric(
                        U256,
                    ),
                ),
            },
            FunctionAttributes {
                is_public: true,
                name: "foo",
                params: [],
                return_type: Base(
                    Numeric(
                        U256,
                    ),
                ),
            },
        ],
        init_function: None,
        events: [],
        string_literals: {},
        structs: [],
        external_contracts: [],
        created_contracts: {},
    }

note: 
  ┌─ features/return_u256_from_called_fn.fe:5:16
  │
5 │         return self.foo()
  │                ^^^^^^^^ attributes hash: 14265823366479253008
  │
  = SelfAttribute {
        func_name: "foo",
    }

note: 
  ┌─ features/return_u256_from_called_fn.fe:4:22
  │
4 │     pub def bar() -> u256:
  │                      ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/return_u256_from_called_fn.fe:7:22
  │
7 │     pub def foo() -> u256:
  │                      ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )


