analyzer/tests/snapshots/analysis__case_084_self_address.snap
---
source: analyzer/tests/analysis.rs
expression: "build_snapshot(fixture, src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "my_address",
                        params: [],
                        return_type: Base(
                            Address,
                        ),
                    },
                ],
            },
        ),
    },
    tuples_used: {},
}

note: 
  ┌─ features/self_address.fe:3:16
  │
3 │         return self.address
  │                ^^^^^^^^^^^^ attributes hash: 513065555763557710
  │
  = ExpressionAttributes {
        typ: Base(
            Address,
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/self_address.fe:3:16
  │
3 │         return self.address
  │                ^^^^^^^^^^^^ attributes hash: 513065555763557710
  │
  = ExpressionAttributes {
        typ: Base(
            Address,
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/self_address.fe:2:5
  │  
2 │ ╭     pub def my_address() -> address:
3 │ │         return self.address
  │ ╰───────────────────────────^ attributes hash: 9990363011312656955
  │  
  = FunctionAttributes {
        is_public: true,
        name: "my_address",
        params: [],
        return_type: Base(
            Address,
        ),
    }

note: 
  ┌─ features/self_address.fe:1:1
  │  
1 │ ╭ contract Foo:
2 │ │     pub def my_address() -> address:
3 │ │         return self.address
  │ ╰───────────────────────────^ attributes hash: 9053473018950550582
  │  
  = ContractAttributes {
        public_functions: [
            FunctionAttributes {
                is_public: true,
                name: "my_address",
                params: [],
                return_type: Base(
                    Address,
                ),
            },
        ],
        init_function: None,
        events: [],
        list_expressions: {},
        string_literals: {},
        structs: [],
        external_contracts: [],
        created_contracts: {},
    }

note: 
  ┌─ features/self_address.fe:2:29
  │
2 │     pub def my_address() -> address:
  │                             ^^^^^^^ attributes hash: 574436082528610497
  │
  = Base(
        Address,
    )


